--- a/Prisma_Template_Guide/prisma_template_guide.Rmd
+++ b/Prisma_Template_Guide/prisma_template_guide.Rmd
@@ -29,7 +29,7 @@ When done add a summary abstract here
 
 \newpage
 
-# Section 1: Introduction
+# Introduction
 
 ## What is PRISMA?
 
@@ -55,7 +55,7 @@ The best way to use this guide is to make a duplicate. In this duplicate, you sh
 ## Notes:
 There are ample resources on this topic. This is meant to be interactive and engaging for your learning. There is an already-existing simplified checklist that can be filled out and used to generate reports. It is a [Shiny app](https://prisma.shinyapps.io/checklist/) created by PRISMA. This resource goes beyond a checklist, helping you go through each PRISMA step and check over your work.
 
-# Section 2: Planning
+# Planning
 
 ## What is the PICO Framework?
 The PICO framework is a way to focus your topic and build a well-structured question.
@@ -148,6 +148,8 @@ First thing, lets create a list of keywords for R to use.
 # Note: You can try to use multi-word phrases, but it probably won't work. If you did want to try put "_" between
 # the words.
 prelim_keywords <- c("science, rocks")
+
+cat("Preliminary keyword list:", prelim_keywords)
 ```
 
 ### Expand the Keywords.
@@ -156,13 +158,11 @@ Using that list, this next section will produce variants of the words, synonyms,
 Note: This should work so long as Python is installed. If there are any modules that need installing, you will be notified.
 
 This Python script is "casting a wide net" and may, on accident, produce nonsensical or unrelated words. Please ignore them.
-\newpage
+
 If the below section gives an error that looks like:
 
-```{}
-Error in if (idx != -1) version <- substring(version, 1, idx - 1) : 
-  the condition has length > 1
-```
+
+>Error in if (idx != -1) version <- substring(version, 1, idx - 1) :\newline the condition has length > 1
 
 In the R console run:
 
@@ -296,7 +296,7 @@ mat <- matrix("", nrow = length(row_headers), ncol = length(col_headers),
               dimnames = list(row_headers, col_headers))
 
 # Write to CSV
-write.csv(mat, file = "matrix.csv", quote = TRUE)
+write.csv(mat, file = "./csvs/matrix.csv", quote = TRUE)
 ```
 
 With this CSV, you will search each pair in at least half of your databases and record the number of results. Note the date of the search somewhere on the CSV that was saved by the previous step.
@@ -367,14 +367,14 @@ Once you have all your results, how you store them is up to you. An Excel spread
 ## Parsing Through the Results
 The flow of this section will follow the PRISMA Flowchart.
 
-![PRISMA Flowchart showing what information we need to record.]("./prisma_example_flowchart.jpg")
+![PRISMA Flowchart showing what information we need to record.]("./figures/prisma_example_flowchart.jpg")
 
 There are many ways to do this, and different tools as well. To help learn and understand the process, this explanation will be manual, assuming you are using a software like Excel or something similar. The steps are very clear and mainly text manipulation and human judgement, if you are comfortable with Python, it can be done through code too.
 
 One resource that is helpful if you do not want to do it in Excel is [Covidance](https://www.covidence.org/) and [HubMeta](https://hubmeta.com/).
 
-### Tracking Your Steps
-As you proceed though these next sections, studies will be removed from your search based on critera you set. Even then, we still need to track everything. As stated earlier in this tutorial, all decisions are fine, but everything needs to be tracked and justifiable.
+### Tracking Your Steps - Identifying New Studies
+As you proceed though these next sections, studies will be removed from your search based on criteria you set. Even then, we still need to track everything. As stated earlier in this tutorial, all decisions are fine, but everything needs to be tracked and justifiable.
 
 In this section you will record the starting number of results you had from each database. This is important to know how many studies were removed. It will also allow us to compare our final pool of studies to our original.
 
@@ -410,28 +410,25 @@ If you have all your results in an excel spreadsheet, please [save it as a CSV](
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 # Please remember to change the path if needed! (You can also name the file same as this section and put it in the same place on your computer)
 library(dplyr)
-output_of_dedupe <- "combined_database_results-deduped.csv"
+output_of_dedupe <- "./csvs/combined_database_results-deduped.csv"
 tryCatch({
-  input_of_results <- utils::read.csv("combined_database_results.csv", stringsAsFactors = FALSE)
+  input_of_results <- utils::read.csv("./csvs/combined_database_results.csv", stringsAsFactors = FALSE)
 
-  # Step 2: Deduplicate based on lowercase 'title' and 'year'.
-  # We use group_by() to consider each combination of lowercase title and year.
+  # Deduplicate based on lowercase 'title' and 'year' using group_by() to consider each 
+  # combination of lowercase title and year.
   # Then, slice(1) keeps only the first row for each of those unique groups.
-  # The original capitalization from that first row is preserved.
   deduplicated_df_dplyr <- input_of_results %>%
     group_by(title_lower = tolower(title), year) %>%
     slice(1) %>%
-    ungroup() %>% # It's good practice to ungroup after the operation.
+    ungroup() %>% # Ungroup after the operation.
     select(-title_lower) # Remove the temporary lowercase column.
 
-  # Step 3: Save the deduplicated data to a new CSV file.
-  # Replace 'your_output_file.csv' with your desired output file name.
   write.csv(deduplicated_df_dplyr, output_of_dedupe, row.names = FALSE)
 
   deduplicated_total <- nrow(deduplicated_df_dplyr)
   
   # Print a success message to the console
-  print("Deduplication using dplyr is complete. Check 'your_output_file_dplyr.csv'.")
+  print("Deduplication using dplyr is complete. Check 'combined_database_results-deduped.csv'.")
   print("Original rows:")
   print(nrow(input_of_results))
   print("Rows after deduplication:")
@@ -442,8 +439,19 @@ tryCatch({
   print(e)
 })
 ```
+
 Now that de-duplication is complete, we can begin to screen the title and abstracts of the results, applying our inclusion/exclusion criteria as we go.
+
 ### Title and Abstract Screening
+Title and abstract Screening are a good way to quickly remove irrelevant results. At this stage, it is best to have someone working on this with you. Having a second reviewer will better support the decisions, but each person must work independently of each other to prevent bias. There are two ways to go about this. One, is to have each reviewer go through all the results, and then they compare to see if they made the same decision. Any disagreement is resolved through discussion or a third-part. 
+
+The other way is to split the work. This will allow the review to go faster and put less strain on each reviewer. However, there is more initial work to this method. First, a "code book" must be created. This is a living rule book on how to include or exclude a study, including pre-determined criteria. This book can be changed as you go. The idea being that with a clear and defined set of rules you should be able to make the same type of decisions with the same rational. By doing so, you can split the work knowing that there are significantly reduced individual biases as you are both following the same rules.
+
+More-so, this should be tested. Take representative sample of your results and have both reviewers go over them. After you both go through the sub sample of results, you should calculate [Cohen's kappa coefficient](https://pmc.ncbi.nlm.nih.gov/articles/PMC3900052/). This statistic is used when qualitative or categorical items are being assessed by two separate raters. Cohen's kappa coefficient measures inter-rater reliability. Additionally, [percent agreement](https://pmc.ncbi.nlm.nih.gov/articles/PMC3900052/) can be used alongside the kappa value. These are both two very common and widely used measures.
+
+If there is low inter-rater reliability, the code book needs to be reassessed and you should try the above test adain. Once there is good inter-rater reliability, you may split up the work and proceed.
+
+Whichever approach you choose, make sure to apply clear, logical, and justifiable criteria that is repeatable to all of them. What you apply to one you should apply to all unless you have a good reason.
 
 ### Full Text Screening
 
