--- a/Prisma_Template_Guide/prisma_template_guide.Rmd
+++ b/Prisma_Template_Guide/prisma_template_guide.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Prisma Template Guide"
 author: "Gerard N."
-date: "2025-08-20"
+date: "`r Sys.Date()`"
 output:
   pdf_document:
     latex_engine: xelatex
