--- a/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
+++ b/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
@@ -2,7 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## API Tutorial\n",
+    "This document has two aims:\n",
+    "\n",
+    "- (1) To show you the process of registering and using an API application from Web of Science / Clarivate\n",
+    "\n",
+    "- (2) Utilize a script written by the author to efficiently retrieve results from multiple pages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create an Account or Log In\n",
+    "The first step is to register or log into https://developer.clarivate.com/ .\n",
+    "\n",
+    "![Step 1](./tutorial_screenshots/Screenshot%202025-09-03%20at%203.40.48 PM.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Register the Application Step 1\n",
+    "After you will register for an API application. Please click \"Register\".\n",
+    "\n",
+    "![Step 2](./tutorial_screenshots/Screenshot%202025-09-03%20at%203.41.46 PM.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Register a New Application Step 2\n",
+    "Then click on \"Register a new Application\" ...\n",
+    "\n",
+    "![Step 3](./tutorial_screenshots/Screenshot%202025-09-03%20at%203.43.05 PM.png)\n",
+    "\n",
+    "... and fill out the form.\n",
+    "\n",
+    "![Step 4](./tutorial_screenshots/Screenshot%202025-09-03%20at%203.43.45 PM.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Approval\n",
+    "Once the registration is approved you can click on the Name link of your application as seen below.\n",
+    "\n",
+    "![Step 5](./tutorial_screenshots/Screenshot%202025-09-03%20at%203.44.04 PM.png)\n",
+    "\n",
+    "Then click on the name if the API.\n",
+    "\n",
+    "![Step 6](./tutorial_screenshots/Screenshot%202025-09-03%20at%203.44.37 PM.png)\n",
+    "\n",
+    "This will take you to a window where you can click the \"Try It\" button and you can then see the special UI for your registered application.\n",
+    "\n",
+    "![Step 7](./tutorial_screenshots/Screenshot%202025-09-03%20at%203.45.19 PM.png)\n",
+    "\n",
+    "The rest is play around and learn! This interface allows you to use the AP without code. However, it is not the most efficient. Below is a notebook that will help you get more results faster. Just remember to not exceed the limit of your subscription!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -86,15 +161,10 @@
      "output_type": "stream",
      "text": [
       "Requesting page 1...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 2...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 3...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 4...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 5...\n",
-      "  ... Success! Added 50 results.\n"
+      "  ... Error on page 1: Status code 401\n",
+      "  ... Response: {\n",
+      "  \"message\":\"Invalid authentication credentials\"\n",
+      "}\n"
      ]
     }
    ],
@@ -130,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +208,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Successfully saved 250 results to wos_results.csv\n"
+      "No results to save to CSV.\n"
      ]
     }
    ],
