--- a/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
+++ b/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,16 +72,27 @@
     "\n",
     "![Step 7](./tutorial_screenshots/Screenshot%202025-09-03%20at%203.45.19 PM.png)\n",
     "\n",
-    "The rest is play around and learn! This interface allows you to use the AP without code. However, it is not the most efficient. Below is a notebook that will help you get more results faster. Just remember to not exceed the limit of your subscription!"
+    "The rest is play around and learn! This interface allows you to use the AP without code. It also shows you all teh advance search options and even allows you to perform a test search! This test search will tell you the curl command and show you the example output.\n",
+    "\n",
+    "However, it is not the most efficient way to use the API. Below is a notebook that will help you get more results faster. It is written in python and utilizes requests in place of curl. This helps keep it all in one language! Just remember to not exceed the limit of your subscription!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Script Step 1\n",
+    "This is where you will place your information such as API key, Database, and search phrase. All the abriviations are seen and explained in your individual APU UI. Please refer there."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# THESE ARE PLACE HOLDERS PLEASE MAKE SURE THE INFORMATION MATCHES YOUR SEARCH\n",
+    "# THESE ARE PLACE HOLDERS PLEASE MAKE SURE \n",
+    "# THE INFORMATION MATCHES YOUR SEARCH\n",
     "API_KEY = 'YOUR_API_KEY' # Replace with your actual key\n",
     "database_code = 'WOK'\n",
     "page_limit = 50\n",
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,18 +117,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is a definition used to outline a repeatable task.\n",
+    "# This function creates an encoded query string for a search phrase.\n",
     "def create_encoded_query(phrase):\n",
     "    \"\"\"Encodes a string for use in a URL.\"\"\"\n",
     "    return urllib.parse.quote(phrase)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Script Step 2\n",
+    "This step will build your url phrase that will be added to the base url. This creates the full request that will then be sent to the API."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +173,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Script Step 3\n",
+    "This section does the actual search, retrieving results from pages 1-X, where X is the page limit you defined earlier."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -199,8 +228,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Script Step 4\n",
+    "Finally, the list of JSONs is exported into a more human readable format, a csv. For down stream use."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
