--- a/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
+++ b/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
@@ -2,11 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipython in c:\\users\\gerar\\anaconda3\\lib\\site-packages (8.30.0)\n",
+      "Requirement already satisfied: python-dotenv in c:\\users\\gerar\\anaconda3\\lib\\site-packages (1.1.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\gerar\\anaconda3\\lib\\site-packages (2.32.3)\n",
+      "Requirement already satisfied: decorator in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.1.6)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (3.0.43)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (2.19.1)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.2.0)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (5.14.3)\n",
+      "Requirement already satisfied: colorama in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.4.6)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython) (0.2.5)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (2025.4.26)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from jedi>=0.16->ipython) (0.8.4)\n",
+      "Requirement already satisfied: executing in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from stack-data->ipython) (0.8.3)\n",
+      "Requirement already satisfied: asttokens in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from stack-data->ipython) (3.0.0)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from stack-data->ipython) (0.2.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install ipython python-dotenv requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Image"
+    "from IPython.display import Image\n",
+    "from dotenv import load_dotenv\n",
+    "import urllib.parse\n",
+    "import requests\n",
+    "import json\n",
+    "import csv\n",
+    "import os"
    ]
   },
   {
@@ -87,37 +130,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8646414b229139f84e5861bd43bd8b8fa6084fdb\n"
+     ]
+    }
+   ],
    "source": [
-    "# THESE ARE PLACE HOLDERS PLEASE MAKE SURE \n",
-    "# THE INFORMATION MATCHES YOUR SEARCH\n",
-    "API_KEY = 'YOUR_API_KEY' # Replace with your actual key\n",
-    "database_code = 'WOK'\n",
-    "page_limit = 50\n",
-    "page_max = 5\n",
-    "sort_field = 'LD'\n",
-    "ascending = 'true' # or 'false' or ''\n",
-    "base_url = 'https://api.clarivate.com/apis/wos-starter/v1/documents'\n",
-    "search_phrase = '\"climate change\" OR \"global warming\" AND sustainability'"
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "# Use the environment variable, but fall back to a placeholder if it's not set.\n",
+    "# Replace 'YOUR_API_KEY' with your actual key if you are not using a .env file.\n",
+    "API_KEY = os.environ.get('API_KEY', 'YOUR_API_KEY')\n",
+    "database_code = os.environ.get('database_code')\n",
+    "page_limit = int(os.environ.get('page_limit', 50))\n",
+    "page_max = int(os.environ.get('page_max', 5))\n",
+    "sort_field = os.environ.get('sort_field')\n",
+    "ascending = os.environ.get('ascending')\n",
+    "base_url = os.environ.get('base_url')\n",
+    "search_phrase = os.environ.get('search_phrase')\n",
+    "\n",
+    "print(API_KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import urllib.parse\n",
-    "import requests\n",
-    "import json\n",
-    "import csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,10 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adjust this line to adjust your search fields.\n",
     "search_phrase_with_tag = f'TS=({search_phrase})'\n",
     "\n",
     "params = {\n",
@@ -151,7 +195,7 @@
     "}\n",
     "\n",
     "if ascending == 'true':\n",
-    "    params['sortField'] = f'{sort_field} A' # Note: API docs use a space\n",
+    "    params['sortField'] = f'{sort_field} A' # Note: API docs use a space not a + like in the UI.\n",
     "elif ascending == 'false':\n",
     "    params['sortField'] = f'{sort_field} D'\n",
     "else:\n",
@@ -160,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,41 +234,49 @@
      "output_type": "stream",
      "text": [
       "Requesting page 1...\n",
-      "  ... Error on page 1: Status code 401\n",
-      "  ... Response: {\n",
-      "  \"message\":\"Invalid authentication credentials\"\n",
-      "}\n"
+      "  ... Success! Added 50 results.\n",
+      "Requesting page 2...\n",
+      "  ... Success! Added 50 results.\n",
+      "Requesting page 3...\n",
+      "  ... Success! Added 50 results.\n",
+      "Requesting page 4...\n",
+      "  ... Success! Added 50 results.\n",
+      "Requesting page 5...\n",
+      "  ... Success! Added 50 results.\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1, page_max + 1):\n",
-    "  # Set the page for the current iteration\n",
-    "  params['page'] = i\n",
-    "  \n",
-    "  print(f\"Requesting page {i}...\")\n",
-    "  \n",
-    "  # Make the API call\n",
-    "  response = requests.get(base_url, headers=headers, params=params)\n",
-    "  \n",
-    "  # Check if the request was successful\n",
-    "  if response.status_code == 200:\n",
-    "      data = response.json()\n",
-    "      # The list of documents is in the 'hits' key of the JSON response\n",
-    "      page_hits = data.get('hits', [])\n",
-    "      if page_hits:\n",
-    "          # Add the results from this page to our master list\n",
-    "          all_results.extend(page_hits)\n",
-    "          print(f\"  ... Success! Added {len(page_hits)} results.\")\n",
+    "if not base_url:\n",
+    "    print(\"Error: 'base_url' is not set. Please check your .env file or environment variables.\")\n",
+    "else:\n",
+    "    for i in range(1, page_max + 1):\n",
+    "      # Set the page for the current iteration\n",
+    "      params['page'] = i\n",
+    "      \n",
+    "      print(f\"Requesting page {i}...\")\n",
+    "      \n",
+    "      # Make the API call\n",
+    "      response = requests.get(base_url, headers=headers, params=params)\n",
+    "      \n",
+    "      # Check if the request was successful\n",
+    "      if response.status_code == 200:\n",
+    "          data = response.json()\n",
+    "          # The list of documents is in the 'hits' key of the JSON response\n",
+    "          page_hits = data.get('hits', [])\n",
+    "          if page_hits:\n",
+    "              # Add the results from this page to our master list\n",
+    "              all_results.extend(page_hits)\n",
+    "              print(f\"  ... Success! Added {len(page_hits)} results.\")\n",
+    "          else:\n",
+    "              # Stop if a page returns no results\n",
+    "              print(\"  ... No more results found. Stopping.\")\n",
+    "              break \n",
     "      else:\n",
-    "          # Stop if a page returns no results\n",
-    "          print(\"  ... No more results found. Stopping.\")\n",
-    "          break \n",
-    "  else:\n",
-    "      print(f\"  ... Error on page {i}: Status code {response.status_code}\")\n",
-    "      print(f\"  ... Response: {response.text}\")\n",
-    "      # Stop the loop if an error occurs\n",
-    "      break"
+    "          print(f\"  ... Error on page {i}: Status code {response.status_code}\")\n",
+    "          print(f\"  ... Response: {response.text}\")\n",
+    "          # Stop the loop if an error occurs\n",
+    "          break"
    ]
   },
   {
@@ -237,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +297,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "No results to save to CSV.\n"
+      "Successfully saved 250 results to wos_results.csv\n"
      ]
     }
    ],
@@ -278,7 +330,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -292,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
