--- a/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
+++ b/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
@@ -9,27 +9,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: ipython in c:\\users\\gerar\\anaconda3\\lib\\site-packages (8.30.0)\n",
-      "Requirement already satisfied: python-dotenv in c:\\users\\gerar\\anaconda3\\lib\\site-packages (1.1.0)\n",
-      "Requirement already satisfied: requests in c:\\users\\gerar\\anaconda3\\lib\\site-packages (2.32.3)\n",
-      "Requirement already satisfied: decorator in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (5.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.19.2)\n",
-      "Requirement already satisfied: matplotlib-inline in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.1.6)\n",
-      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (3.0.43)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (2.19.1)\n",
-      "Requirement already satisfied: stack-data in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.2.0)\n",
-      "Requirement already satisfied: traitlets>=5.13.0 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (5.14.3)\n",
-      "Requirement already satisfied: colorama in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.4.6)\n",
-      "Requirement already satisfied: wcwidth in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython) (0.2.5)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (3.7)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (2.3.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (2025.4.26)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from jedi>=0.16->ipython) (0.8.4)\n",
-      "Requirement already satisfied: executing in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from stack-data->ipython) (0.8.3)\n",
-      "Requirement already satisfied: asttokens in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from stack-data->ipython) (3.0.0)\n",
-      "Requirement already satisfied: pure-eval in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from stack-data->ipython) (0.2.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Requirement already satisfied: ipython in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (8.37.0)\n",
+      "Requirement already satisfied: python-dotenv in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (1.1.1)\n",
+      "Requirement already satisfied: requests in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (2.32.5)\n",
+      "Requirement already satisfied: matplotlib-inline in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (0.1.7)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (2.19.2)\n",
+      "Requirement already satisfied: typing_extensions>=4.6 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (4.14.0)\n",
+      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (3.0.51)\n",
+      "Requirement already satisfied: decorator in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (5.2.1)\n",
+      "Requirement already satisfied: stack_data in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (0.6.3)\n",
+      "Requirement already satisfied: pexpect>4.3 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (4.9.0)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (5.14.3)\n",
+      "Requirement already satisfied: jedi>=0.16 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (0.19.2)\n",
+      "Requirement already satisfied: exceptiongroup in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from ipython) (1.3.0)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests) (2025.8.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests) (3.10)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests) (3.4.3)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from jedi>=0.16->ipython) (0.8.4)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from pexpect>4.3->ipython) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython) (0.2.13)\n",
+      "Requirement already satisfied: pure-eval in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from stack_data->ipython) (0.2.3)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from stack_data->ipython) (3.0.0)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /Users/gerardnasseruncc/Library/Python/3.10/lib/python/site-packages (from stack_data->ipython) (2.2.0)\n",
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 25.2 is available.\n",
+      "You should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.10/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -39,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"climate change\" OR \"global warming\" AND sustainability\n"
+      "None\n"
      ]
     }
    ],
@@ -160,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,23 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requesting page 1...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 2...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 3...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 4...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 5...\n",
-      "  ... Success! Added 50 results.\n"
+      "Error: 'base_url' is not set. Please check your .env file or environment variables.\n"
      ]
     }
    ],
@@ -289,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +293,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Successfully saved 250 results to wos_results.csv\n"
+      "No results to save to CSV.\n"
      ]
     }
    ],
@@ -330,7 +326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -344,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
