Add PubMed API notebook and env template, update WoS API
Added a new PubMed_API.ipynb Jupyter notebook and environment template file for PubMed API usage. Updated .gitignore to exclude PubMed .env files. Modified WoS_API.ipynb to remove output cells and added an environment template for Web of Science API. These changes improve reproducibility and setup for both PubMed and Web of Science API tutorials.

--- a/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
+++ b/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
@@ -2,46 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: ipython in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (9.4.0)\n",
-      "Requirement already satisfied: python-dotenv in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (1.1.1)\n",
-      "Requirement already satisfied: requests in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (2.32.4)\n",
-      "Requirement already satisfied: decorator in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from ipython) (5.2.1)\n",
-      "Requirement already satisfied: ipython-pygments-lexers in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from ipython) (1.1.1)\n",
-      "Requirement already satisfied: jedi>=0.16 in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from ipython) (0.19.2)\n",
-      "Requirement already satisfied: matplotlib-inline in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from ipython) (0.1.7)\n",
-      "Requirement already satisfied: pexpect>4.3 in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from ipython) (4.9.0)\n",
-      "Requirement already satisfied: prompt_toolkit<3.1.0,>=3.0.41 in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from ipython) (3.0.51)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from ipython) (2.19.2)\n",
-      "Requirement already satisfied: stack_data in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from ipython) (0.6.3)\n",
-      "Requirement already satisfied: traitlets>=5.13.0 in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from ipython) (5.14.3)\n",
-      "Requirement already satisfied: wcwidth in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from prompt_toolkit<3.1.0,>=3.0.41->ipython) (0.2.13)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from requests) (3.4.3)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from requests) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from requests) (2.0.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages (from requests) (2025.8.3)\n",
-      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from jedi>=0.16->ipython) (0.8.4)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from pexpect>4.3->ipython) (0.7.0)\n",
-      "Requirement already satisfied: executing>=1.2.0 in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from stack_data->ipython) (2.2.0)\n",
-      "Requirement already satisfied: asttokens>=2.1.0 in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from stack_data->ipython) (3.0.0)\n",
-      "Requirement already satisfied: pure-eval in /Users/gerardnasseruncc/Library/Python/3.13/lib/python/site-packages (from stack_data->ipython) (0.2.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install ipython python-dotenv requests"
+    "import sys\n",
+    "!{sys.executable} -m pip install ipython python-dotenv requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,17 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"climate change\" OR \"global warming\" AND sustainability\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
@@ -163,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,26 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requesting page 1...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 2...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 3...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 4...\n",
-      "  ... Success! Added 50 results.\n",
-      "Requesting page 5...\n",
-      "  ... Success! Added 50 results.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not base_url:\n",
     "    print(\"Error: 'base_url' is not set. Please check your .env file or environment variables.\")\n",
@@ -292,18 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data written to wos_processed_results.csv\n",
-      "2025-09-09 23:10:36.645336\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if all_results:\n",
     "    publication_list = []\n",
