--- a/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
+++ b/APIs/Web_of_Science_API_Resources_and_Tutorials/WoS_API.ipynb
@@ -2,9 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ipython in c:\\users\\gerar\\anaconda3\\lib\\site-packages (8.30.0)\n",
+      "Requirement already satisfied: python-dotenv in c:\\users\\gerar\\anaconda3\\lib\\site-packages (1.1.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\gerar\\anaconda3\\lib\\site-packages (2.32.3)\n",
+      "Requirement already satisfied: decorator in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (5.1.1)\n",
+      "Requirement already satisfied: jedi>=0.16 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.19.2)\n",
+      "Requirement already satisfied: matplotlib-inline in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.1.6)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (3.0.43)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (2.19.1)\n",
+      "Requirement already satisfied: stack-data in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.2.0)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (5.14.3)\n",
+      "Requirement already satisfied: colorama in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from ipython) (0.4.6)\n",
+      "Requirement already satisfied: wcwidth in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython) (0.2.5)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from requests) (2025.4.26)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.4 in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from jedi>=0.16->ipython) (0.8.4)\n",
+      "Requirement already satisfied: executing in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from stack-data->ipython) (0.8.3)\n",
+      "Requirement already satisfied: asttokens in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from stack-data->ipython) (3.0.0)\n",
+      "Requirement already satisfied: pure-eval in c:\\users\\gerar\\anaconda3\\lib\\site-packages (from stack-data->ipython) (0.2.2)\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install ipython python-dotenv requests"
@@ -12,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,9 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"climate change\" OR \"global warming\" AND sustainability\n"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
@@ -126,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +214,7 @@
     "    'X-ApiKey': API_KEY\n",
     "}\n",
     "\n",
-    "all_results = []\n"
+    "all_results = []"
    ]
   },
   {
@@ -192,9 +227,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requesting page 1...\n",
+      "  ... Success! Added 50 results.\n",
+      "Requesting page 2...\n",
+      "  ... Success! Added 50 results.\n",
+      "Requesting page 3...\n",
+      "  ... Success! Added 50 results.\n",
+      "Requesting page 4...\n",
+      "  ... Success! Added 50 results.\n",
+      "Requesting page 5...\n",
+      "  ... Success! Added 50 results.\n"
+     ]
+    }
+   ],
    "source": [
     "if not base_url:\n",
     "    print(\"Error: 'base_url' is not set. Please check your .env file or environment variables.\")\n",
@@ -238,12 +290,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data written to wos_processed_results.csv\n",
+      "2025-09-18 16:43:52.180493\n"
+     ]
+    }
+   ],
    "source": [
     "if all_results:\n",
     "    publication_list = []\n",
+    "\n",
     "    # Begin Loop\n",
     "    for record in all_results:\n",
     "        # Create Empty Dict\n",
@@ -285,7 +347,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -299,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
